--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -1,6 +1,6 @@
 <div #tab class="tabs">
     <ng-container *ngFor="let tab of tabs;let i=index">
-        <lu-tab (click)="indexTab.emit(i)" [tab]="tab"></lu-tab>
+        <lu-tab (click)="indexTab.emit(i);" [tab]="tab"></lu-tab>
     </ng-container>
 </div>
 
