--- a/src/app/shared/components/month-challenges/month-challenges.component.css
+++ b/src/app/shared/components/month-challenges/month-challenges.component.css
@@ -16,6 +16,11 @@ lu-tab{
     cursor: pointer;
 }
 
+.active{
+    transform: scale(1.2);
+}
+
+
 .general-challenges{
     background-color: var(--theme-color-background-03);
     box-shadow: 0px 6px 14px rgba(32, 45, 81, 0.05);
