--- a/src/styles.css
+++ b/src/styles.css
@@ -105,6 +105,17 @@ sn-icon>i[class^=sn-]{
     padding: 0.75rem 1.5rem;
 }
 
+.bg__circle::before{
+    background: var(--theme-color-background-03);
+    border-radius: 0 0 50% 50%;
+    content: '';
+    height: 375px;
+    top:-200px;
+    left: -25%;
+    position: absolute;
+    width: 150%;
+    z-index: -1;
+}
 
 /*Animation styles*/
 
