Cambio de los assets

--- a/src/app/shared/atoms/question/question.component.html
+++ b/src/app/shared/atoms/question/question.component.html
@@ -1,7 +1,7 @@
 <div class="question">
     <div (click)="show()" class="question__header">
         <span class="question__text">{{question.question}}</span>
-        <img class="question__chevron" animation [rotate]="deg" src="../../../../assets/icons/chevron-gradient.svg" alt="">
+        <img class="question__chevron" animation [rotate]="deg" src="../../../../assets/icons/chevron-gradient.png" alt="">
 
     </div>
 
