--- a/src/app/shared/components/card-data/card-data.component.html
+++ b/src/app/shared/components/card-data/card-data.component.html
@@ -3,7 +3,7 @@
     <sn-round-card [principalText]="data.current_limit.amount" [secondaryText]="'Tu crédito actual'"></sn-round-card>
 
     <div class="percent">
-        <sn-circle-progress [percent]="percent" [icon]="'../../../../assets/icons/trophy.svg'"></sn-circle-progress>
+        <sn-circle-progress [percent]="percent" [icon]="'../../../../assets/icons/trophy.png'"></sn-circle-progress>
     </div>
 
     <sn-round-card [principalText]="data.potential_limit.amount" [secondaryText]="'Crédito potencial'"></sn-round-card>
