--- a/src/app/shared/molecules/modal/modal.component.html
+++ b/src/app/shared/molecules/modal/modal.component.html
@@ -3,7 +3,7 @@
         <div class="modal__body">
             <button class="modal__btn-cerrar" (click)="closeModal.emit(false)">Cerrar</button>
             <div class="modal__header">
-                <img [src]="'../../../../assets/icons/'+data.icon+'.svg'"  alt="icono">
+                <img [src]="'../../../../assets/icons/'+data.icon+'.png'"  alt="icono">
                 <h2 class="modal__title">{{data.name}}</h2>
                 <span class="modal__subtitle">{{data.description}}</span>            
             </div>
