--- a/src/app/shared/atoms/question/question.component.css
+++ b/src/app/shared/atoms/question/question.component.css
@@ -5,6 +5,7 @@
     transition: all ease .3s;
 }
 .question__header{
+    align-items: center;
     display: flex;
     justify-content: space-between;
     padding: 1.5rem 1.25rem;
@@ -16,6 +17,10 @@
     max-width: 245px;
 
 }
+
+.question__chevron{
+    max-height: 1rem;
+}    
 
 .question__body{
     font-size: .875rem;
