--- a/src/app/shared/atoms/tab/tab.component.html
+++ b/src/app/shared/atoms/tab/tab.component.html
@@ -2,6 +2,6 @@
     'tab':true,
     'tab--disabled':(tab.status!=='ONGOING')
 }">
-    <img class="tab__icon" [src]="'../../../../assets/icons/'+icon+'.svg'" alt="">
+    <img class="tab__icon" [src]="'../../../../assets/icons/'+icon+'.png'" alt="">
     <span class="tab__text">{{tab.texto}}</span>
 </button>
