--- a/src/app/pages/message/message.component.html
+++ b/src/app/pages/message/message.component.html
@@ -1,10 +1,10 @@
 <div class="message">
     <div class="header">
         <div class="header__santander-icon">
-            <img src="../../../assets/icons/santandeer-icon.svg" alt="">
+            <img src="../../../assets/icons/santander-icon.png" alt="">
         </div>
         <div class="header__icon">
-            <img src="../../../assets/icons/oh-no.svg" alt="">
+            <img src="../../../assets/icons/mission-complete.png" alt="">
         </div>
     </div>
 
