--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <img src="../../../../assets/icons/chevron-left.svg" alt="">
+    <img src="../../../../assets/icons/chevron-left.png" alt="">
     <h2>Reto LikeU</h2>
-    <img src="../../../../assets/icons/phone.svg" alt="">
+    <img src="../../../../assets/icons/phone.png" alt="">
 </div>
