Cambio en los estilos del modal en caso de accelerator, se agrega directiva para el active

--- a/src/app/shared/atoms/tab/tab.component.css
+++ b/src/app/shared/atoms/tab/tab.component.css
@@ -10,9 +10,15 @@
     justify-content: center;
     min-width: 7.25rem;
     padding: .5rem 1rem;
+    transition: all ease .3s;
     width: fit-content;
 
 }
+
+.tab--active{
+    transform: scale(1.2);
+}
+
 .tab__text{
     display: block;
 }
@@ -21,7 +27,6 @@
     margin-right: .25rem;
     max-width: 20px;
 }
-
 
 .tab--disabled{
     background:transparent;
