--- a/src/app/shared/components/month-challenges/month-challenges.component.css
+++ b/src/app/shared/components/month-challenges/month-challenges.component.css
@@ -1,10 +1,13 @@
 .tabs{
+    align-items: center;
     display: grid;
-    column-gap: .5rem;
+    column-gap: 1rem;
     margin:0 1rem 1.5rem 1rem;
     grid-auto-flow: column;
+    height: 3rem;
     max-width: 340px;
     overflow-x: auto;
+    overflow-y: none;
     width: 375px;
 }
 
