--- a/src/app/shared/molecules/modal/modal.component.html
+++ b/src/app/shared/molecules/modal/modal.component.html
@@ -4,7 +4,12 @@
             <button class="modal__btn-cerrar" (click)="closeModal.emit(false)">Cerrar</button>
             <div class="modal__header">
                 <img [src]="'../../../../assets/icons/'+data.icon+'.png'"  alt="icono">
-                <h2 class="modal__title">{{data.name}}</h2>
+                <h2 [ngClass]="{
+                    'modal__title':true,
+                    'modal__title--gradient':(data.accelerator)
+                }">
+                    {{data.name}}
+                </h2>
                 <span class="modal__subtitle">{{data.description}}</span>            
             </div>
             <ul>
