--- a/src/app/shared/atoms/circle-progress/circle-progress.component.html
+++ b/src/app/shared/atoms/circle-progress/circle-progress.component.html
@@ -13,7 +13,7 @@
                         <stop offset="90%" stop-color="#A540D7"></stop>
                     </linearGradient>
                 </defs>
-                <circle class="circle circle--active" r="46" cx="50" cy="50" [ngStyle]="{'stroke-dashoffset': strokeDashoffset}"></circle>
+                <circle class="circle circle--active" r="46" cx="50" cy="50" animation [loadProgress]="strokeDashoffset"></circle>
             </svg>
         </div>
     </div>
