--- a/src/app/shared/atoms/tab/tab.component.html
+++ b/src/app/shared/atoms/tab/tab.component.html
@@ -1,4 +1,4 @@
-<button [ngClass]="{
+<button [id]="tab" [ngClass]="{
     'tab':true,
     'tab--active':false,
     'tab--disabled':(tab.status!=='ONGOING')
