--- a/src/app/shared/atoms/tab/tab.component.html
+++ b/src/app/shared/atoms/tab/tab.component.html
@@ -1,6 +1,5 @@
-<button [id]="tab" [ngClass]="{
+<button tabsDirective="tab" [id]="tab" [ngClass]="{
     'tab':true,
-    'tab--active':false,
     'tab--disabled':(tab.status!=='ONGOING')
 }"
 >
