--- a/src/app/shared/atoms/tab/tab.component.html
+++ b/src/app/shared/atoms/tab/tab.component.html
@@ -1,6 +1,6 @@
 <button tabsDirective="tab" [id]="tab" [ngClass]="{
     'tab':true,
-    'tab--disabled':(tab.status!=='ONGOING')
+    'active--tab':(tab.status==='ONGOING')
 }"
 >
     <img class="tab__icon" [src]="'../../../../assets/icons/'+icon+'.png'" alt="">
