--- a/src/app/shared/atoms/tab/tab.component.css
+++ b/src/app/shared/atoms/tab/tab.component.css
@@ -1,9 +1,9 @@
 .tab{
     align-items: center;
-    background: linear-gradient(97.56deg, #FF1D53 -35.86%, #A540D7 87.68%);
-    border: none;
+    background:transparent;
+    border: 1px solid var(--theme-color-ui-04);
     border-radius: 24px;
-    color: var(--theme-color-text-01);
+    color: var(--theme-color-text-04);
     display: flex;
     font-size: .875rem;
     font-weight: 700;
@@ -12,12 +12,6 @@
     padding: .5rem 1rem;
     transition: all ease .3s;
     width: fit-content;
-    z-index: 1;
-
-}
-
-.tab--active{
-    transform: scale(1.2);
 }
 
 .tab__text{
@@ -29,8 +23,10 @@
     max-width: 20px;
 }
 
-.tab--disabled{
-    background:transparent;
-    border: 1px solid var(--theme-color-ui-04);
-    color: var(--theme-color-text-04);
+.active--tab{
+    background: linear-gradient(97.56deg, #FF1D53 -35.86%, #A540D7 87.68%);
+    border: none;
+    color: #fff!important;
+    position: relative;
+    transform: scale(0.9);
 }
