--- a/src/app/pages/message/message.component.html
+++ b/src/app/pages/message/message.component.html
@@ -4,14 +4,14 @@
             <img src="../../../assets/icons/santander-icon.png" alt="">
         </div>
         <div class="header__icon">
-            <img src="../../../assets/icons/mission-complete.png" alt="">
+            <img [src]="'../../../assets/icons/'+ notification.icon +'.png'" alt="">
         </div>
     </div>
 
     <div class="content">
-        <h3 class="content__title">¡Lo sentimos!</h3>
-        <h3 class="content__subtitle">No has logrado completar el reto LikeU</h3>
-        <p class="content__description">Desafortunadamente no podrás continuar participando en el reto. Recuerda que puedes continuar usando tu tarjeta.</p>
+        <h3 class="content__title">{{notification.title}}</h3>
+        <h3 class="content__subtitle">{{notification.subtitle}}</h3>
+        <p class="content__description">{{notification.description}}</p>
         <button class="btn" routerLink="/">Continuar</button>
     </div>
 </div>
