--- a/src/app/pages/first-page/first-page.component.html
+++ b/src/app/pages/first-page/first-page.component.html
@@ -16,5 +16,5 @@
 
     <p class="first-page__terms">*Consulta términos y condiciones completos en <a href="">www.santander.com.mx/personas/tarjetas-de-credito/likeu.html</a></p>
 
-    <button class="first-page__button">Quiero unirme al reto</button>
+    <button class="btn" [routerLink]="'/'">Quiero unirme al reto</button>
 </div>
