--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -16,15 +16,15 @@
         <p class="challenge__description">La validación de los retos se realiza cada fecha de corte. No lo olvides.</p>
         <div class="challenges">
             <ng-container *ngFor="let challenge of mandatoryChallenges">
-                <sn-challenge animation="zoomIn" [challenge]="challenge" (click)="openModal.emit($event)" (click)="challengeActive.emit(challenge)"></sn-challenge>
+                <sn-challenge [statusMission]="missionStatus" animation="zoomIn" [challenge]="challenge"  (click)="openModal.emit($event)" (click)="challengeActive.emit(challenge)"></sn-challenge>
             </ng-container>
         </div>
     </div>
-    <div *ngIf="optionalChallenges.length>0" class="special-challenges">
+    <div *ngIf="specialChallenges.length>0" class="special-challenges">
         <h2 class="challenges__title">Retos especiales</h2>
         <p class="challenge__description">Completa cualquiera de las misiones para aumentar tu límite de crédito.   </p>
         <div class="challenges">
-            <ng-container *ngFor="let challenge of optionalChallenges">
+            <ng-container *ngFor="let challenge of specialChallenges">
                 <sn-challenge animation="zoomIn" [challenge]="challenge" (click)="openModal.emit($event)" (click)="challengeActive.emit(challenge)"></sn-challenge>  
             </ng-container>
         </div>
