se pasa el timer a un atomo y se agrega el seervicio de la configuracion xterna

--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -10,7 +10,7 @@
          [mandatoryChallenges]="mandatoryChallenges" 
          [specialChallenges]="specialChallenges" 
          [tabs]="tabs"
-         [days]="remainingDays"
+         [seconds]="remainingDays"
          (indexTab)="getChallenges($event);indexTab=$event"
          [missionStatus]="missionStatus"
          [initialTab]="currentPeriod"
