--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -1,15 +1,15 @@
 <div #tabsContainer id="tabs--container" tabsDirective="tabs-container" class="tabs">
     <ng-container *ngFor="let tab of tabs;let i=index">
-        <lu-tab class="tab" (click)="indexTab.emit(i);" [tab]="tab"></lu-tab>
+        <lu-tab class="tab" (click)="indexTab.emit(i); activeTab=i" [tab]="tab"></lu-tab>
     </ng-container>
 </div>
 
 <div class="general-challenges">
 
-    <div *ngIf="days!==null" class="time-remaining">
-        <span class="time-remaining__text"> Faltan: <span class="time-remaining__days">{{days}}</span></span>
+    <ng-container *ngIf="activeTab===initialTab">
+        <lu-timer [seconds]="seconds"></lu-timer>
+    </ng-container>
 
-    </div>
 
     <div class="normal-challenges">
         <h2 class="challenges__title">Retos por completar</h2>
