Correccion del timer, y servicio de configuracion externalizada

--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -11,6 +11,7 @@
          [specialChallenges]="specialChallenges" 
          [tabs]="tabs"
          [seconds]="remainingDays"
+         [dueDate]="dueDay"
          (indexTab)="getChallenges($event);indexTab=$event"
          [missionStatus]="missionStatus"
          [initialTab]="currentPeriod"
