--- a/src/app/shared/atoms/timer/timer.component.html
+++ b/src/app/shared/atoms/timer/timer.component.html
@@ -1,2 +1,3 @@
-
-<span class="time-remaining__text"> Faltan: <span class="time-remaining__days">{{remainingDays}}</span></span>
+<div class="time-remaining">
+    <span class="time-remaining__text"> Faltan: <span class="time-remaining__days">{{remainingDays}}</span></span>
+</div>
