--- a/src/app/pages/first-page/first-page.component.html
+++ b/src/app/pages/first-page/first-page.component.html
@@ -4,7 +4,7 @@
     <div class="first-page__header">
         <h2 class="first-page__title">Reto Like U</h2>
         <h4 class="first-page__subtitle">¡Santander confía en ti!</h4>
-        <img class="" src="../../../assets/icons/cards.svg" alt="">
+        <img class="" src="../../../assets/icons/cards.png" alt="">
     </div>
     
     <p class="first-page__description"> <span>Incrementa tu línea de crédito</span> de forma automática cumpliendo los objetivos para alcanzar <span>tu potencial financiero.</span></p>
