--- a/src/styles.css
+++ b/src/styles.css
@@ -54,6 +54,7 @@ body{
     font-family: 'SantanderText', sans-serif, Arial, Helvetica;
     margin:auto;
     max-width: 375px;
+    overflow: hidden;
     width: 375px;
 }
 
