--- a/src/app/shared/atoms/error-dialog/error-dialog.component.html
+++ b/src/app/shared/atoms/error-dialog/error-dialog.component.html
@@ -3,7 +3,7 @@
     }" 
     animation="downUp"
 >
-    <img class="error-dialog__img" [src]="'../../../../assets/icons/'+errorData.icon+'.svg'" alt="">
+    <img class="error-dialog__img" [src]="'../../../../assets/icons/'+errorData.icon+'.png'" alt="">
     <span class="error-dialog__title">{{errorData.title}}</span>
     <p class="error-dialog__description">{{errorData.message}}</p>
     <button class="modal__btn-cerrar" >Cerrar</button>
