--- a/src/app/pages/message/message.component.html
+++ b/src/app/pages/message/message.component.html
@@ -12,6 +12,6 @@
         <h3 class="content__title">{{notification.title}}</h3>
         <h3 class="content__subtitle">{{notification.subtitle}}</h3>
         <p class="content__description">{{notification.description}}</p>
-        <button class="btn" routerLink="/">Continuar</button>
+        <button class="btn" routerLink="/" (click)="onClick()">Continuar</button>
     </div>
 </div>
