Se agregan los metodos calbacks en los componentes, header, error-dailog, app y modal

--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -26,5 +26,5 @@
     <sn-spinner ></sn-spinner>
 </ng-template>
 
-<app-modal *show="showModal" [data]="challengeActive" (closeModal)="showModal=$event"></app-modal>
+<app-modal *show="showModal" [challenge]="challengeActive" (closeModal)="showModal=$event"></app-modal>
     
