--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -1,4 +1,4 @@
-<div #challengeLikeU class="challenge-likeu__container bg__circle" *ngIf="cardDetail;else spinner" >
+<div class="challenge-likeu__container bg__circle" *ngIf="cardDetail;else spinner" >
     <app-header animation="up"></app-header> 
     <div class="challenge-likeu">
         <app-card-data 
@@ -16,7 +16,7 @@
          [missionStatus]="missionStatus"
          [initialTab]="currentPeriod"
          (challengeActive)="challengeActive=$event"
-         (openModal)="show()"
+         (openModal)="showModal=true"
         >
         </app-month-challenges>
         <app-frequently-questions [questions]="FAQs"></app-frequently-questions>
@@ -26,5 +26,5 @@
     <sn-spinner ></sn-spinner>
 </ng-template>
 
-<!-- <app-modal *show="showModal" [challenge]="challengeActive" (closeModal)="showModal=$event"></app-modal> -->
+<app-modal *show="showModal" [challenge]="challengeActive" (closeModal)="showModal=$event"></app-modal>
     
