prueba de la vista del template ref

--- a/src/app/shared/molecules/modal/modal.component.html
+++ b/src/app/shared/molecules/modal/modal.component.html
@@ -1,4 +1,4 @@
-<ng-template #modal>
+<ng-template *ngIf="true">
     <div class="modal-bg">
         <div animation="zoomIn" class="modal">
             <div class="modal__body">
