prueba de close modal

--- a/src/app/pages/message/message.component.css
+++ b/src/app/pages/message/message.component.css
@@ -1,9 +1,13 @@
 .message{
     background: var(--theme-color-background-03);
     height: 100vh;
+    left: 0;
     overflow: hidden;
-    position: relative;
+    position: absolute;
+    top: 0;
+    width: 100%;
     z-index: 1000;
+
 }
 
 .header{
