--- a/src/app/shared/molecules/modal/modal.component.html
+++ b/src/app/shared/molecules/modal/modal.component.html
@@ -1,23 +1,23 @@
 <div class="modal-bg">
     <div animation="zoomIn" class="modal">
         <div class="modal__body">
-            <button class="modal__btn-cerrar" (click)="close()">Cerrar</button>
+            <button class="modal__btn-cerrar" (click)="modal.close">Cerrar</button>
             <div class="modal__header">
-                <img [src]="'../../../../assets/icons/'+challenge.icon+'.png'"  alt="icono">
+                <img [src]="'../../../../assets/icons/'+modal.icon+'.png'"  alt="icono">
                 <h2 [ngClass]="{
                     'modal__title':true,
-                    'modal__title--gradient':(challenge.accelerator)
+                    'modal__title--gradient':(modal.accelerator)
                 }">
-                    {{challenge.name}}
+                    {{modal.name}}
                 </h2>
-                <span class="modal__subtitle">{{challenge.description}}</span>            
+                <span class="modal__subtitle">{{modal.description}}</span>            
             </div>
             <ul>
-                <ng-container *ngFor="let condition of challenge.conditions">
+                <ng-container *ngFor="let condition of modal.conditions">
                     <li>{{condition}}</li>
                 </ng-container>
             </ul>
         </div>
-        <button class="btn" *ngIf="challenge.redirection" (click)="redirect()">Continuar</button>
+        <button class="btn" *ngIf="modal.redirection" (click)="redirect()">Continuar</button>
     </div>
 </div>
