--- a/src/app/shared/molecules/modal/modal.component.html
+++ b/src/app/shared/molecules/modal/modal.component.html
@@ -1,7 +1,7 @@
 <div class="modal-bg">
     <div animation="zoomIn" class="modal">
         <div class="modal__body">
-            <button class="modal__btn-cerrar" (click)="modal.close">Cerrar</button>
+            <button class="modal__btn-cerrar" (click)="modal.close()">Cerrar</button>
             <div class="modal__header">
                 <img [src]="'../../../../assets/icons/'+modal.icon+'.png'"  alt="icono">
                 <h2 [ngClass]="{
