--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -15,7 +15,7 @@
          (indexTab)="getChallenges($event);indexTab=$event"
          [missionStatus]="missionStatus"
          [initialTab]="currentPeriod"
-         (challengeActive)="challengeActive=$event;show()"
+         (challengeActive)="challengeActive=$event;showModal()"
         >
         </app-month-challenges>
         <app-frequently-questions [questions]="FAQs"></app-frequently-questions>
