--- a/src/app/pages/message/message.component.css
+++ b/src/app/pages/message/message.component.css
@@ -3,7 +3,7 @@
     height: 100vh;
     left: 0;
     overflow: hidden;
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     z-index: 1000;
