Correcion cut of date

--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -11,7 +11,7 @@
          [specialChallenges]="specialChallenges" 
          [tabs]="tabs"
          [seconds]="remainingDays"
-         [dueDate]="dueDay"
+         [dueDate]="cutOfDate"
          (indexTab)="getChallenges($event);indexTab=$event"
          [missionStatus]="missionStatus"
          [initialTab]="currentPeriod"
