--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -8,7 +8,7 @@
         </app-card-data>
 
         <app-month-challenges
-
+        [mission]="missionActive"
         (challengeActive)="challengeActive=$event;showModal()"
         >
 
