--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -1,4 +1,4 @@
-<div class="challenge-likeu__container bg__circle" *ngIf="missions;else spinner" >
+<div class="challenge-likeu__container bg__circle" *ngIf="cardDetail;else spinner" >
     <app-header animation="up"></app-header> 
     <div class="challenge-likeu">
         <app-card-data 
