--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -1,14 +1,14 @@
-<div #tabsContainer id="tabs--container" tabsDirective="tabs-container" class="tabs">
+<!-- <div #tabsContainer id="tabs--container" tabsDirective="tabs-container" class="tabs">
     <ng-container *ngFor="let tab of tabs;let i=index">
         <lu-tab class="tab" (click)="indexTab.emit(i); activeTab=i" [tab]="tab"></lu-tab>
     </ng-container>
-</div>
+</div> -->
 
 <div class="general-challenges">
 
-    <ng-container *ngIf="activeTab===initialTab">
+    <!-- <ng-container *ngIf="activeTab===initialTab">
         <lu-timer [seconds]="seconds" [dueDate]="dueDate"></lu-timer>
-    </ng-container>
+    </ng-container> -->
 
 
     <div class="normal-challenges">
