validacion special challenges

--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -20,7 +20,7 @@
             </ng-container>
         </div>
     </div>
-    <div *ngIf="specialChallenges.length>0" class="special-challenges">
+    <div *ngIf=" specialChallenges && specialChallenges.length>0 " class="special-challenges">
         <h2 class="challenges__title">Retos especiales</h2>
         <p class="challenge__description">Completa cualquiera de las misiones para aumentar tu límite de crédito.   </p>
         <div class="challenges">
