Mandatory y special challenges

--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -9,6 +9,8 @@
 
         <app-month-challenges
         [mission]="missionActive"
+        [mandatoryChallenges]="mandatoryChallenges"
+        [specialChallenges]="specialChallenges"
         [tabs]="tabs"
         (challengeActive)="challengeActive=$event;showModal()"
         (indexTab)="showMissionActive($event)"
