--- a/src/app/shared/atoms/tab/tab.component.css
+++ b/src/app/shared/atoms/tab/tab.component.css
@@ -19,10 +19,14 @@
 }
 
 .tab__icon{
-    margin-right: .25rem;
-    max-width: 20px;
     background-image: url("../../../../assets/icons/lock.png");
     background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 20px;
+    margin-right: .25rem;
+    max-width: 20px;
+    width: 20px;
+
 }
 
 .active--tab{
