--- a/src/app/shared/atoms/tab/tab.component.css
+++ b/src/app/shared/atoms/tab/tab.component.css
@@ -21,6 +21,8 @@
 .tab__icon{
     background-image: url("../../../../assets/icons/lock.png");
     background-repeat: no-repeat;
+    background-color: transparent;
+    border: none;
     background-size: 100% 100%;
     height: 20px;
     margin-right: .25rem;
