--- a/src/app/shared/atoms/tab/tab.component.html
+++ b/src/app/shared/atoms/tab/tab.component.html
@@ -1,6 +1,6 @@
 <button tabsDirective="tab" [id]="tab.id" [ngClass]="{
     'tab':true,
-    'active--tab':(tab.status==='active')
+    'active--tab':(tab.status==='ongoing')
     
 }"
 >
