--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -10,6 +10,7 @@
         <app-month-challenges
         [mission]="missionActive"
         [tabs]="tabs"
+        [dueDate]="cutOfDate"
         [initialTab]="currentPeriod"
         [activeTab]="indexTab"
         (challengeActive)="challengeActive=$event;showModal()"
