--- a/src/app/pages/message/message.component.css
+++ b/src/app/pages/message/message.component.css
@@ -82,3 +82,14 @@ button{
     width: 150%;
     z-index: 0;
 }
+
+
+@media screen and (max-width:700px) {
+    .header, .content__subtitle{
+        margin-bottom: 1.5rem;
+    }
+
+    p.content__description{
+        margin-bottom: 3rem;
+    }
+}
