--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -13,6 +13,7 @@
             [dueDate]="cutOfDate"
             [initialTab]="currentPeriod"
             [activeTab]="indexTab"
+            [specialChallenges]="specialChallenges"
             (challengeActive)="challengeActive=$event;showModal()"
             (indexTab)="showMissionActive($event);indexTab=$event"
         >
