--- a/src/app/pages/message/message.component.css
+++ b/src/app/pages/message/message.component.css
@@ -84,7 +84,7 @@ button{
 }
 
 
-@media screen and (max-width:700px) {
+@media screen and (max-height:700px) {
     .header, .content__subtitle{
         margin-bottom: 1.5rem;
     }
